# DeGarden-Backend

./: .env.example  Cargo.toml  rust-project.json  rust-toolchain.toml
src/: main.rs
src/database/: mod.rs  timescale.rs
src/routes/: db.rs  flowmeter.rs  mod.rs  moisture.rs
src/routes/firmware/: flowmeter.rs  mod.rs  moisture.rs
src/routes/web/: blockchain.rs  calculate.rs  client.rs  direct.rs  firmware.rs  host.rs  mod.rs  program_utils.rs  types.rs  utils.rs
