[package]
name = "backend"
version = "0.5.0"
edition = "2021"

[dependencies]
# Server
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }
tokio = { version = "1.36", features = ["full"] }
borsh = "0.10"
borsh-derive = "0.10"
anyhow = "1.0"

solana-client = "2.0"     
solana-sdk = "2.0"

# Utils
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DB
tokio-postgres = "0.7.0"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Files
tokio-util = { version = "0.7", features = ["io"] }
